disable some old classes and patch Response subclasses